overflow-x fixed + input focus

--- a/styles/style.css
+++ b/styles/style.css
@@ -84,6 +84,11 @@ search-form__textfield:active {
     word-spacing: -3px;
 }
 
+.search-form__textfield:focus {
+    outline: 1px solid white;
+    outline-offset: 1px;
+}
+
 .search-form__label {
     display: block;
 }
@@ -122,6 +127,11 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox {
     justify-content: space-between;
 }
 
+.search-form__label:focus-within {
+    outline: 1px solid white;
+    outline-offset: 1px;
+}
+
 .button {
     font-family: 'Fira Sans Condensed', sans-serif;
     font-weight: 700;
@@ -138,6 +148,11 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox {
 
 .button:active {
     background-color: #545050;
+}
+
+.button:focus {
+    outline: 1px solid white;
+    outline-offset: 1px;
 }
 
 .search-form__submit-button {
@@ -167,12 +182,18 @@ input[type='checkbox']:checked + .search-form__pseudo-checkbox {
     position: relative;
     width: 100%;
     height: 298px;
-    overflow: scroll;
     margin-top: 26px;
+    overflow-y: scroll;
+    scrollbar-width: thin;
 }
 
-.content__list-item:focus {
-    border: 1px solid white;
+.preloader {
+    z-index: 1;
+}
+
+.content__list-item:focus-within {
+    outline: 1px solid white;
+    outline-offset: 1px;
 }
 
 .content__card-link {
